Remove database dependency from Render deployment